--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -289,7 +289,7 @@ h6 {
 #hero {
     width: 100%;
     height: 100vh;
-    background: url("../img/vinit.jpeg") top right no-repeat;
+    background: url("../img/Vinit_Profile.jpeg") top right no-repeat;
     background-size: contain;
     position: relative;
 }
